Fix hero sections streching on mobile browsers

--- a/history/static/history/css/history.css
+++ b/history/static/history/css/history.css
@@ -1,12 +1,3 @@
-/* ----- Hero ----- */
-
-#hero-single {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-}
-
 /* ----- Timeline ----- */
 
 #timeline {
